# structures_algorithms_coursework

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
appendix/: example.csv
structures_algorithms_coursework/: __main__.py
structures_algorithms_coursework/structures/: __init__.py  item.py
structures_algorithms_coursework/utils/: __init__.py  columns.py
